Made sure correct types/abilities get more visible when guessing them right

--- a/assets/css/guesser.css
+++ b/assets/css/guesser.css
@@ -98,7 +98,8 @@ tr:nth-child(even) {
 }
 
 .correct {
-    color: green;
+    background-color: darkgreen;
+    color: whitesmoke;
 }
 
 #overlay {
